#ifndef MOTOR_H
#define MOTOR_H

class Motor {
public:
    void run();
};

#endif

